# bitx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  INSTRUCTION_LOG.md  LIMITATIONS.md  NEXT.md  NORTH_STAR.md  PERSONA.md  README.md  ROADMAP.md  WEIGHT_COMPOSITION.md  anthropic_server.py  chat_model.py  pyproject.toml  requirements-dev.txt  start_api.sh
.github/: pull_request_template.md
.github/workflows/: ci.yml
bitx/: __init__.py  __main__.py  backends.py  bench.py  bench_record.py  cli.py  report.py  suite.py
bitx/data/: edit_suite_capitals.jsonl  semantic_ambiguity_suite.jsonl
bitx/serve/: __init__.py  api.py  chat.py
kef/: __init__.py  __main__.py  adapter_gate.py  bundle.py  char_advance.py  char_dpo.py  char_fix.py  char_guardrails.py  char_router.py  char_sense.py  char_skill.py  chat_runtime.py  cli.py  config.py  core.py  diagnose.py  encoder.py  eng_craft.py  eng_router.py  export.py  factstore.py  folk_logic.py  folk_router.py  framework.py  hard_expert_v2.py  hard_expert_v3.py  hard_expert_v4.py  ingest.py  io_utils.py  logic_core.py  logic_router.py  math_reason.py  model.py  paths.py  persona_concise.py  persona_precision.py  spell_sense.py  unify_fix.py  weight_compose.py  weights.py
tests/: test_bitx_bench.py  test_char_skill.py  test_factstore.py  test_kef_cli.py  test_kef_ingest.py  test_paths.py  test_weight_compose.py
